2000-10-25  Radek Doulik  <rodo@helixcode.com>

	* popup.c (popup_show): updated, event could be NULL
	(popup_show): clear cd->properties_types before refilling
	(prepare_properties_and_menu): extracted function
	(property_dialog_show): new function
	(show_prop_dialog): extracted function

	* editor-control-factory.c (new_editor_api): updated to EditorAPI

2000-10-24  Radek Doulik  <rodo@helixcode.com>

	* editor-control-factory.c (set_frame_cb): set vertical scrollbar
	policy to always

	* image.c (value_changed): new signal handler for adjustments

	* Makefile.am (html_editor_control_SOURCES): removed
	gtk-combo-box.[ch] as they are not needed anymore, we use widgets
	from GAL now

2000-10-20  Michael Meeks  <michael@helixcode.com>

	* test-html-editor-control.c (container_create): re-write for new
	UI handler.

	* editor-control-factory.c (set_frame_cb): remove toolbar_setup.

	* toolbar.c (editor_toolbar_cut_cb, editor_toolbar_copy_cb),
	(editor_toolbar_paste_cb, editor_toolbar_undo_cb, editor_toolbar_redo_cb),
	(toolbar_setup): kill, were duplicated in the menu code; now each is a verb.
	toolbar_info: remove

	* html-editor-control.xml: add the toolbar.

	* test-html-editor-control.c (load_through_persist_stream): update to
	Dietmar's new API.

2000-10-20  Radek Doulik  <rodo@helixcode.com>

	* rule.c (fill_sample): set bg for sample view

	* text.c (fill_sample): set bg for sample view

2000-10-17  Radek Doulik  <rodo@helixcode.com>

	* properties.c (gtk_html_edit_properties_dialog_show): don't show
	notebook tabs and border if there is less than two notebook pages

	* text.c (text_properties): use sample_frame, added sample frame
	(fill_sample): new helper function
	(text_properties): changed style handling
	use fill_data all over place

	* utils.c (sample_frame): new helper function

	* rule.c (fill_sample): use gtk_html_load_from_string

2000-10-12  Radek Doulik  <rodo@helixcode.com>

	* popup.c (prop_dialog): added rule property type